# meo-3-open-service

./: .gitignore  AGENTS.md  Makefile  README.md  build.gradle.kts  install-meo-linux.sh  install-meo-win.bat  settings.gradle.kts
config/: meo.env
config/node-red/: settings.js
data/: meo.db
data/node-red/: .config.nodes.json  .config.runtime.json  .config.runtime.json.backup  .config.users.json
docs/: firmware_development_guide.md  http_api.md  mqtt_messaging.md  note.md  project_specs.md
gradle/wrapper/: gradle-wrapper.properties
meo-common/: build.gradle.kts  settings.gradle.kts
meocore/: build.gradle.kts  settings.gradle.kts
node-red/: MEO3_DESIGN.md  NodeRED_DESIGN.md  package-lock.json  package.json
node-red/scripts/: dev.js
rust/meo-3-neo-ble-service/: Cargo.toml  Makefile
rust/meo-3-neo-ble-service/src/: main.rs
rust/meo-3-neo-ble-service/src/ble/: device.rs  error.rs  manager.rs  mod.rs
rust/meo-3-neo-ble-service/src/blemqtt/: README.md  codec.rs  command.rs  event.rs  mod.rs  mqtt.rs  reply.rs  service.rs  topic.rs
rust/meo-3-neo-ble-service/src/log/: log.rs  mod.rs
scripts/: package.sh  run-all.sh  run-meo-service.sh  run-node-red.sh
src/main/java/org/thingai/app/meo/: Main.java  MeoDiscoveryService.java  MeoService.java
src/main/java/org/thingai/meo/: Main.java  MeoDiscoveryService.java  MeoService.java
src/main/java/org/thingai/meo/api/: MDeviceApi.java  MServiceApi.java  Route.java
src/main/java/org/thingai/meo/callback/: MDeviceDiscoverCallback.java  MRequestCallback.java
(+179 files in other folders)
