[package]
name = "meo-3-neo-ble-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bluer = { version = "0.17.4", features = ["bluetoothd"] }
dbus = { version = "0.9.11", features = ["vendored"] }
futures-util = "0.3.32"
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
